# uchino-it

./: .gitignore  Dockerfile  Pipfile  README.md  pyproject.toml
source/: conf.py  index.rst
source/alarm/: index.rst
source/contacts/: index.rst
source/credits/: index.rst
source/line/: index.rst
source/locale/ja/LC_MESSAGES/: index.po
source/locale/ja/LC_MESSAGES/alarm/: index.po
source/locale/ja/LC_MESSAGES/contacts/: index.po
source/locale/ja/LC_MESSAGES/credits/: index.po
source/locale/ja/LC_MESSAGES/line/: index.po
source/locale/ja/LC_MESSAGES/names/: index.po
source/locale/ja/LC_MESSAGES/telephone/: index.po
source/locale/ja/LC_MESSAGES/trouble/: index.po
source/locale/ja/LC_MESSAGES/usage-hours/: index.po
source/locale/ja/LC_MESSAGES/weather/: index.po
source/locale/ja/LC_MESSAGES/youtube/: index.po
source/names/: index.rst
source/telephone/: index.rst
source/trouble/: index.rst
source/usage-hours/: index.rst
source/weather/: index.rst
source/youtube/: index.rst
zshrc-entrypoint-init.d/: install-vscode-python-extensions.sh
