[tool.poetry]
#
# Use Poetry only for dependency management but not for packaging
#   https://python-poetry.org/docs/basic-usage/#operating-modes
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"
#
# https://github.com/sphinx-doc/sphinx-docker-images/blob/master/base/Dockerfile
#
sphinx = "^7.3.7"
pillow = "^10.4.0"
sphinx-intl = "^2.2.0"
